# smart-watch

./: .gitignore  Cargo.toml  README.md  build.rs  flake.nix  sdkconfig.defaults
src/: axp192.rs  bluetooth.rs  display.rs  dither.rs  espnow.rs  font.rs  ingerland.rs  leds.rs  main.rs  message.rs  messages.proto  rtc.rs  utils.rs
