[package]
name = "esp-32-rust-testing"
version = "0.1.0"
edition = "2021"
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitvec = "1.0.1"
cichlid = { git = "https://github.com/simmsb/cichlid.git", version = "0.2.1", features = ["nightly"] }
embedded-svc = { version = "0.22.1", features = ["experimental"] }
esp-idf-hal = { version = "0.38.0", features = ["experimental"] }
esp-idf-svc = { version = "0.42.3", features = ["experimental"] }
esp-idf-sys = { version = "0.31.6", features = ["binstart"] }
eyre = "0.6.8"
itertools = "0.10.3"
smart-leds = "0.3.0"
smart-leds-trait = "0.2.1"
smol = "1.2.5"
tracing = { version = "0.1.36", features = ["log", "log-always"] }

[profile.release]
opt-level = "s"

[profile.dev]
debug = true
opt-level = "z"

[build-dependencies]
anyhow = "1.0.61"
embuild = "0.30.2"

[patch.crates-io]
smol = { git = "https://github.com/esp-rs-compat/smol" }
polling = { git = "https://github.com/esp-rs-compat/polling" }
socket2 = { git = "https://github.com/esp-rs-compat/socket2" }
getrandom = { version = "0.2", git = "https://github.com/esp-rs-compat/getrandom.git" }
