[package]
name = "esp-32-rust-testing"
version = "0.1.0"
edition = "2021"
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitvec = "1.0.1"
bus = "2.3.0"
cichlid = { git = "https://github.com/simmsb/cichlid.git", version = "0.2.1", features = [
  "nightly",
] }
codepage-437 = "0.1.0"
color-eyre = "0.6.2"
const-zero = "0.1.0"
embassy-util = { git = "https://github.com/embassy-rs/embassy", version = "0.1.0" }
embedded-hal = "1.0.0-alpha.8"
embedded-svc = { git = "https://github.com/esp-rs/embedded-svc", branch = "next" }
esp-idf-hal = { git = "https://github.com/esp-rs/esp-idf-hal", branch = "next" }
esp-idf-svc = { git = "https://github.com/esp-rs/esp-idf-svc", branch = "next" }
esp-idf-sys = { version = "0.31.6", features = ["binstart"] }
heapless = { version = "0.7.16", features = ["cas"] }
itertools = "0.10.3"
once_cell = "1.13.1"
postcard = { version = "1.0.2", default-features = false, features = [
  "alloc",
  "postcard-derive",
  "use-std",
] }
serde = { version = "1.0.143", features = ["derive"] }
smart-leds = "0.3.0"
smart-leds-trait = "0.2.1"
# smol = "1.2.5"
tracing = { version = "0.1.36", features = ["log", "log-always"] }

[features]
experimental = [
  "embedded-svc/nightly",
  "embedded-svc/experimental",
  "esp-idf-hal/nightly",
  "esp-idf-svc/experimental",
  "esp-idf-svc/nightly",
]
default = ["experimental"]

[profile.release]
codegen-units = 1
incremental = false
opt-level = 3
lto = "fat"
overflow-checks = false
debug-assertions = false
debug = 1

[profile.dev]
debug = true
opt-level = "z"

[build-dependencies]
anyhow = "1.0.61"
embuild = "0.30.2"

# [patch.crates-io]
# esp-idf-hal = { git = "https://github.com/esp-rs/esp-idf-hal", branch = "next"}
# smol = { git = "https://github.com/esp-rs-compat/smol" }
# polling = { git = "https://github.com/esp-rs-compat/polling" }
# socket2 = { git = "https://github.com/esp-rs-compat/socket2" }
# getrandom = { version = "0.2", git = "https://github.com/esp-rs-compat/getrandom.git" }
