[package]
name = "smart-watch"
version = "0.1.0"
edition = "2021"
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitvec = "1.0.1"
bus = "2.3.0"
color-eyre = "0.6.2"
const-zero = "0.1.0"
display-interface = "0.4.1"
display-interface-spi = "0.4.1"
eh_0_2 = { version = "0.2.7", package = "embedded-hal" }
embassy-util = { git = "https://github.com/embassy-rs/embassy", version = "0.1.0" }
embedded-graphics = "0.7.1"
embedded-hal = "1.0.0-alpha.8"
embedded-svc = { git = "https://github.com/esp-rs/embedded-svc", branch = "next" }
embedded-text = "0.5.0"
eos = { git = "https://github.com/rapptz/eos", version = "0.1.0", default-features = false, features = ["alloc", "formatting", "libc", "macros", "parsing", "std"] }
esp-idf-hal = { git = "https://github.com/esp-rs/esp-idf-hal", branch = "next" }
esp-idf-svc = { git = "https://github.com/esp-rs/esp-idf-svc", branch = "next" }
esp-idf-sys = { version = "0.31.6", features = ["binstart"] }
heapless = { version = "0.7.16", features = ["cas"] }
itertools = "0.10.3"
mipidsi = "0.2.1"
once_cell = "1.13.1"
pcf8563 = "0.1.2"
postcard = { version = "1.0.2", default-features = false, features = [
  "alloc",
  "postcard-derive",
  "use-std",
] }
profont = "0.6.1"
serde = { version = "1.0.143", features = ["derive"] }
tracing = { version = "0.1.36", features = ["log", "log-always"] }
uuid = "1.1.2"

[features]
experimental = [
  "embedded-svc/nightly",
  "embedded-svc/experimental",
  "esp-idf-hal/nightly",
  "esp-idf-svc/experimental",
  "esp-idf-svc/nightly",
]
default = ["experimental"]

[profile.release]
codegen-units = 1
incremental = false
opt-level = 3
lto = "fat"
overflow-checks = false
debug-assertions = false
debug = 1

[profile.dev]
debug = true
opt-level = "z"

[build-dependencies]
anyhow = "1.0.61"
embuild = "0.30.2"

# [patch.crates-io]
# esp-idf-hal = { git = "https://github.com/esp-rs/esp-idf-hal", branch = "next"}
# smol = { git = "https://github.com/esp-rs-compat/smol" }
# polling = { git = "https://github.com/esp-rs-compat/polling" }
# socket2 = { git = "https://github.com/esp-rs-compat/socket2" }
# getrandom = { version = "0.2", git = "https://github.com/esp-rs-compat/getrandom.git" }
